# 2DGameEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROGRAM_FLOW.md  PROGRESS.md  README.md  debug_sprite.cpp  run.sh  test_collision.sh  🎮 Game Engine Course Review.docx
.github/workflows/: build.yml  release.yml
src/: main.cpp
src/ecs/: Component.hpp  Entity.cpp  Entity.hpp  README.md
src/engine/: Engine.cpp  Engine.hpp  GameApp.cpp  GameApp.hpp  Priority_List.md
src/engine/animation/: SpriteSheetLoader.cpp  SpriteSheetLoader.hpp
src/engine/core/: Types.hpp
src/engine/core/ecs/: ComponentManager.hpp  ECS-Development-Plan.md  Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  README.md  System.hpp  SystemManager.cpp  SystemManager.hpp  World.cpp  World.hpp  WorldState.cpp  WorldState.hpp
src/engine/core/ecs/components/: AIComponent.hpp  AnimationState.hpp  Collider2D.hpp  Lifetime.hpp  ParticleComponent.hpp  ParticleEmitterComponent.hpp  PhysicsMode.hpp  Sprite2D.hpp  SpriteAnimation.hpp  SpriteStateComponent.hpp  Tag.hpp  Transform2D.hpp  Velocity2D.hpp
src/engine/core/ecs/spatial/: QuadTree.cpp  QuadTree.hpp  README.md  SimpleGrid.cpp  SimpleGrid.hpp  SpatialPartition.cpp  SpatialPartition.hpp
src/engine/core/ecs/systems/: AISystem.cpp  AISystem.hpp  AnimationSystem.cpp  AnimationSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DebugRenderSystem.cpp  DebugRenderSystem.hpp  LifetimeSystem.cpp  LifetimeSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  README.md  RenderSystem.cpp  RenderSystem.hpp  SpriteStateSystem.cpp  SpriteStateSystem.hpp
src/engine/core/event/: ConditionalEventListener.cpp  ConditionalEventListener.hpp  Event-Development-Plan.md  Event.hpp  EventFilter.cpp  EventFilter.hpp  EventListener.hpp  EventManager.cpp  EventManager.hpp  EventType.hpp  README.md  SceneEvents.hpp
src/engine/core/event/events/: InputEvents.hpp  PhysicsEvents.hpp  RenderEvents.hpp
src/engine/core/scene/: Scene-Development-Plan.md  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/engine/ecs/: README.md  System.hpp  world.cpp
src/engine/graphics/renderer/: README.md  Renderer.cpp  Renderer.hpp
src/engine/graphics/sprite/: README.md  SpriteRenderer.cpp  SpriteRenderer.hpp
src/engine/input/: Input-Development-Plan.md  InputManager.cpp  InputManager.hpp  README.md
src/engine/resource/: README.md  ResourceManager.cpp  ResourceManager.hpp
src/engine/utils/: PathUtils.cpp  PathUtils.hpp
src/event/: EventListener.hpp  EventManager.cpp  EventType.hpp  readme.MD
src/events/: Event.hpp  EventListener.hpp  EventManager.cpp  EventManager.hpp  SceneEvents.hpp
src/examples/: README.md
src/examples/zombie_survivor/: CMakeLists.txt  Flow.md  GameScene.cpp  GameScene.hpp  README.md  TODO.md  ZombieSurvivorScene.hpp  ZombieTestScene.cpp  ZombieTestScene.hpp  main.cpp  run.sh
src/examples/zombie_survivor/configs/: ProjectileConfig.cpp  ProjectileConfig.hpp
src/examples/zombie_survivor/ecs/: GameEntityFactory.cpp  GameEntityFactory.hpp  RenderLayer.hpp  TODO.md  UIFactory.cpp  UIFactory.hpp
src/examples/zombie_survivor/ecs/components/: AimingComponent.hpp  AmmoComponent.hpp  BoundaryComponent.hpp  CombatStatsComponent.hpp  EnemyComponent.hpp  ExperienceComponent.hpp  FollowComponent.hpp  HUDComponent.hpp  HealthComponent.hpp  InputComponent.hpp  MovementComponent.hpp  PlayerStatsComponent.hpp  ProjectileComponent.hpp  TODO.md  TargetComponent.hpp  UIComponent.hpp  UpgradeComponent.hpp  WeaponComponent.hpp
src/examples/zombie_survivor/ecs/systems/: AimingSystem.cpp  AimingSystem.hpp  AmmoSystem.cpp  AmmoSystem.hpp  BoundarySystem.cpp  BoundarySystem.hpp  DamageSystem.cpp  DamageSystem.hpp  EnemySpawnSystem.cpp  EnemySpawnSystem.hpp  ExperienceSystem.cpp  ExperienceSystem.hpp  GroundRenderSystem.cpp  GroundRenderSystem.hpp  HUDDataSystem.cpp  HUDDataSystem.hpp  HUDRenderSystem.cpp  HUDRenderSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerStatsSystem.cpp  PlayerStatsSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  RotationSystem.cpp  RotationSystem.hpp  UIInputSystem.cpp  UIInputSystem.hpp  UpgradeSystem.cpp  UpgradeSystem.hpp  WeaponFireSystem.cpp  WeaponFireSystem.hpp  WeaponFollowSystem.cpp  WeaponFollowSystem.hpp  WeaponInputSystem.cpp  WeaponInputSystem.hpp  (+4 more)
src/examples/zombie_survivor/events/: GameEventData.hpp  GameEventTypes.hpp  GameEventUtils.hpp  ProjectileEventUtils.hpp
src/graphics/: Renderer.cpp  Renderer.hpp  SpriteRenderer.cpp
src/input/: InputManager.cpp  InputManager.hpp
src/resources/: ResourceManager.cpp  ResourceManager.hpp
src/sandbox/: SandboxApp.cpp  SandboxApp.hpp  main.cpp
src/sandbox/testbed/integration/: QuadTreeTest.cpp
src/sandbox/testbed/render_test/: DebugScene.cpp  DebugScene.hpp  SpriteScene.cpp  SpriteScene.hpp
src/scenes/: DebugScene.cpp  DebugScene.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SpriteScene.cpp  SpriteScene.hpp  TestScene.cpp  TestScene.hpp  WhiteScene.cpp  WhiteScene.hpp
src/utils/: PathUtils.cpp  PathUtils.hpp
test/: TestEventSystem.cpp  TestEventWithSDL.cpp
